--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {   
-        "src": "all//resumeproject//wsgi.py",
+        "src": "resumeproject/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
@@ -21,7 +21,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "all//resumeproject//wsgi.py"
+        "dest": "resumeproject/wsgi.py"
       }
     ]
   }
